Message box height set to 500px. Span counter now in seperate div for alignment purposes. Need to make corrections to interior message box.

--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,10 @@ hr {
   margin: 10px;
 }
 
+.form-message form input {
+  height: 500px;
+}
+
 /* FILLER */
 .filler {
   height: auto;
